# pendula

./: HACKERS.md  Makefile  README.md  SPEC.md  env.example  pyproject.toml
.ai/: README.md  as_needed.md  other_files.txt
.ai/manuals/: BACKEND.md  README.md  llama.cpp-OpenAI-support.md  openai_create_chat_completions.md
.ai/prompts/: 2026-W26.01.txt  2026-W26.cli_refactor_answers.md  20260622_0notes.txt  20260622_0start.txt  20260622_s05_notes.txt  20260622_s05_start.txt  20260622_s06_start.txt  20260622_s07_start.txt  20260622_testing.txt  20260623_s08_start.txt  README.md  s02_tool_use.md
.ai/reports/: 20260622_s04_hooks_plan.md  20260622_s05_todo_write_plan.md  20260622_s06_subagent_plan.md  20260622_s07_skill_loading_plan.md  20260623_s08_context_compact_plan.md  README.md  cli_refactor.md  prompt_practices.md  research_report.md  research_report_answers.md
prompts/: prompt1.txt
src/pendula/: __init__.py  agent.py  cli.py  compact.py  config.py  hooks.py  logging.py  models.py  pendula.py  repl.py  s02.py  skills.py  subagent.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_compact.py  test_config.py  test_hooks.py  test_logging.py  test_repl.py  test_skills.py  test_subagent.py  test_tools.py
