[project]
name = "pendula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OpenCode Agent", email = "agent@yourdomain.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "llm>=0.31",
    "openai>=2.43.0",
    "structlog>=25.2.0",
]

[project.scripts]
pendula = "pendula:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "interrogate>=1.7.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "radon>=6.0.1",
    "refurb>=2.3.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "vcrpy>=8.2.1",
    "vulture>=2.16",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes (catches undefined names / unused variables)
    "B",   # Bugbear (catches common design anti-patterns)
    "S",   # Bandit Automated Security checks
    "I",   # Isort (enforces clean import sorting structures)
    "N",   # PEP8 Naming convention enforcement
    "RUF"  # Ruff-specific absolute modern rules
]
ignore = [
    "S101", # Allows 'assert' statements for pytest modules
    "E501"  # Let the formatter handle long agent lines, don't trigger lint errors
]


[tool.bandit]
skips = ["B101", "B404", "B602"]

[tool.interrogate]
fail-under = 90
exclude = ["tests"]
ignore-init-method = true
ignore-module = true

[tool.ty]
rules = { all = "error" }
